# flowsheet-digitization

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  cli.py  pyproject.toml  railway.toml
.github/workflows/: ci.yml
.seed/verifier/: 1990-04apr0106-page01.bundle.json  1990-04apr0106-page02.bundle.json  1990-04apr0106-page03.bundle.json  1990-04apr0106-page04.bundle.json  1990-04apr0106-page05.bundle.json  1990-04apr0106-page06.bundle.json  1990-04apr0106-page07.bundle.json  1990-04apr0106-page08.bundle.json  1990-04apr0106-page09.bundle.json  1990-04apr0106-page10.bundle.json  1990-04apr0106-page11.bundle.json  1990-04apr0106-page12.bundle.json  1990-04apr0106-page13.bundle.json  1990-04apr0106-page14.bundle.json  1990-04apr0106-page15.bundle.json  1990-04apr0106-page16.bundle.json  1990-04apr0106-page17.bundle.json  1990-04apr0106-page18.bundle.json  1990-04apr0106-page19.bundle.json  1990-04apr0106-page20.bundle.json  1990-04apr0106-page21.bundle.json  1990-04apr0106-page22.bundle.json  1990-04apr0106-page23.bundle.json  1990-04apr0106-page24.bundle.json  1990-04apr0106-page25.bundle.json  1990-04apr0106-page26.bundle.json  1990-04apr0106-page27.bundle.json  1990-04apr0106-page28.bundle.json  1990-04apr0106-page29.bundle.json  1990-04apr0106-page30.bundle.json  1990-04apr0106-page31.bundle.json  1990-04apr0106-page32.bundle.json  1990-04apr0106-page33.bundle.json  1990-04apr0106-page34.bundle.json  1990-04apr0712-page01.bundle.json  1990-04apr0712-page02.bundle.json  1990-04apr0712-page03.bundle.json  1990-04apr0712-page04.bundle.json  1990-04apr0712-page05.bundle.json  1990-04apr0712-page06.bundle.json  (+44 more)
core/: __init__.py  auth.py  calibration.py  calibration_compare.py  calibration_consensus.py  comments.py  continuations.py  gemini.py  golden.py  jobs.py  lml_client.py  page_layout.py  parse.py  pipeline.py  prompts.py  reconciliation.py  render.py  schema.py  spot_check.py
plans/: multi-reviewer-calibration.md  oidc-auth.md
scripts/: _pilot_rebake_1318.py  _pilot_rebake_untouched.py  _revalidate_notes_2026_06_04.py  _revalidate_notes_metrics.py  _revalidate_notes_newprompt.py  aggregate_oddities.sh  backfill_model_metadata.py  build_railway_seed.sh  build_wxyc_track_mv.sql  calibrate_models.py  derive_truth.py  inspect_crops.py  make_verifier_bundle.py  modal_app.py  railway_entrypoint.sh  seed_calibration_anomaly.py  spot_check_discogs.py  tune_reconciliation_threshold.py
tests/golden/: 1990-01jan0106-page05.truth.json  1990-04apr0106-page05.truth.json  1990-04apr0106-page15.truth.json  1990-04apr0106-page20.truth.json  1990-04apr0106-page25.truth.json  README.md
tests/integration/: test_calibration_consensus.py  test_calibration_dumps.py  test_gemini_external.py  test_pipeline.py
tests/unit/: conftest.py  test_auth.py  test_backfill_model_metadata.py  test_calibrate_models.py  test_calibration.py  test_calibration_compare.py  test_calibration_consensus.py  test_calibration_schema.py  test_cli.py  test_comments.py  test_continuations.py  test_derive_truth.py  test_gemini.py  test_golden.py  test_jobs.py  test_lml_client.py  test_make_verifier_bundle.py  test_page_layout.py  test_parse.py  test_prompts.py  test_reconciliation.py  test_render.py  test_schema.py  test_spot_check.py  test_tune_reconciliation_threshold.py  test_verifier_auth_routes.py  test_verifier_calibration.py  test_verifier_serve.py
verifier/: README.md  app.js  index.html  serve.py  styles.css
