[project]
name = "flowsheet-digitization"
version = "0.1.0"
description = "WXYC handwritten flowsheet OCR pipeline (Gemini 3 vision)"
requires-python = ">=3.12"
readme = "README.md"
authors = [
    {name = "WXYC Engineering"}
]

dependencies = [
    "google-genai>=0.8.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.19.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pillow>=10.0",
    "numpy>=2.0",
    # Verifier UI server (verifier/serve.py). The static SPA depends on the
    # POST /api/lookup proxy (request-o-matic doesn't emit CORS) and
    # POST /api/save (writes verified.json + corrections.json, updates
    # jobs.db). httpx is also load-bearing for tests/unit/test_verifier_serve.py
    # via httpx.ASGITransport.
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    # OIDC client (against api.wxyc.org/auth). authlib handles discovery,
    # PKCE, token exchange, and id_token signature + claim validation as
    # one library. itsdangerous powers the signed session cookie and the
    # signed one-shot cookies (state / code_verifier / return_to) the
    # OIDC redirect dance relies on.
    "authlib>=1.3",
    "itsdangerous>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    # Shuffles collection order every run (printing a reproducible seed) so
    # order-dependent test pollution can't hide behind an incidental order —
    # the #91 regression guard. Without it, CI's fixed collection order
    # happened to avoid the poisoning sequence and the leak went unnoticed.
    "pytest-randomly>=3.0.0",
    # Pinned (not >=) so a new release that changes lint or type-check rules
    # cannot silently fail CI on an unrelated PR. Bumps should be deliberate.
    # Mirrors library-metadata-lookup.
    "ruff==0.15.6",
    "mypy==1.19.1",
]
analysis = [
    # Used by scripts/spot_check_discogs.py to query the local Discogs PG cache.
    # Optional because the pipeline itself doesn't need it; only included here
    # so a fresh checkout can `pip install -e ".[analysis]"` and run the script.
    "psycopg[binary]>=3.1",
]

[project.scripts]
flowsheets = "cli:app"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
include = ["core*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4"]
ignore = ["E501", "B008", "C901"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["N802", "N803"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
# authlib ships no type stubs and `types-Authlib` is incomplete. Only
# core/auth.py touches it and the contract is small (JWT/JWS/JWKS).
# Suppressing missing-imports beats untyped-stub noise on every CI run.
module = "authlib.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "external_api: tests that hit a real external API (Gemini). Excluded from default CI; opt-in via -m external_api.",
    "slow: tests that take more than a few seconds.",
    "calibration_dump: tests that read saved calibration dumps from /tmp/modal-dump and assume those dumps are current. Excluded from default CI because stale dumps would fail; opt-in via -m calibration_dump after a fresh calibration.",
]
# Default run excludes external_api, slow, and calibration_dump. CI runs the
# same default; a separate workflow runs `pytest -m external_api` on a
# schedule against a small set of golden pages, and `pytest -m calibration_dump`
# is a manual post-calibration step.
addopts = "-m 'not external_api and not slow and not calibration_dump'"
